# neander_checkpoints

./: .gitignore  CLAUDE.md  EXAMPLES.md  LICENSE  README.md  build.sh  pyproject.toml
.claude/commands/: neander-redact.md  neander-resume.md  neander-rewind.md  neander-search.md  neander-status.md  neander-summarize.md  neander-transcript.md  redact.md  resume.md  rewind.md  session-stats.md  summarize.md  transcript.md
.claude/skills/neander-redact/: SKILL.md
.claude/skills/neander-resume/: SKILL.md
.claude/skills/neander-rewind/: SKILL.md
.claude/skills/neander-search/: SKILL.md
.claude/skills/neander-session-stats/: SKILL.md
.claude/skills/neander-status/: SKILL.md
.claude/skills/neander-summarize/: SKILL.md
.claude/skills/neander-transcript/: SKILL.md
agents/neander-code-context/: SKILL.md
config/: hooks_config.json  project_claude_snippet.md
hooks/: hooks_config.json  install.sh  project_claude_snippet.md  uninstall.sh
scripts/: auto_summarize.sh  checkpoint.sh  detect_commit.sh  get_branch_context.py  on_session_start.sh  on_stop.sh  parse_jsonl.py  restore.sh  save_summary.sh
skills/neander-code-context/: SKILL.md
skills/neander-summarize/: SKILL.md
skills/neander-transcript/: SKILL.md
src/neander_checkpoints/: __init__.py  cli.py  install.py  resume.py  uninstall.py
src/neander_checkpoints/bundled/scripts/: link_commit.sh  parse_jsonl.py  persist_summary.sh  redact.py
tests/: test_auto_summarize.sh  test_checkpoint.sh  test_detect_commit.sh  test_no_branch_switch.sh  test_parse_jsonl.py  test_save_summary.sh
(+3 files in other folders)
